force-app/main/default/objects/Activity/fields/CargaInicial__c.field-meta.xml
<CustomField>
    <fullName>CargaInicial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica que la cita se ha creado de la migración inicial</description>
    <label>Carga Inicial</label>
    <type>Checkbox</type>
</CustomField>