force-app/main/default/objects/Activity/fields/DireccionOficina__c.field-meta.xml
<CustomField>
    <fullName>DireccionOficina__c</fullName>
    <description>Dirección de la oficina asociada a la cita</description>
    <formula>Oficina__r.ShippingStreet + &quot; - &quot; + Oficina__r.ShippingCity + &quot; (&quot; + Oficina__r.ShippingPostalCode + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección oficina</label>
    <type>Text</type>
</CustomField>