force-app/main/default/objects/Activity/fields/DireccionOficinaCita__c.field-meta.xml
<CustomField>
    <fullName>DireccionOficinaCita__c</fullName>
    <description>Campo que muestra el nombre largo de la oficina</description>
    <formula>Oficina__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección oficina cita</label>
    <type>Text</type>
</CustomField>