force-app/main/default/objects/Activity/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado del evento, donde el asesor indicara si el cliente se ha presentado, si se ha modificado la fecha del evento o si se ha completado sin problemas</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Pendiente Online</fullName>
            </value>
            <value>
                <fullName>Pendiente videollamada</fullName>
            </value>
            <value>
                <fullName>No asiste</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Atendida</fullName>
                <default>true</default>
                <label>Atendida</label>
            </value>
            <value>
                <fullName>Reagendada</fullName>
            </value>
            <value>
                <fullName>Atendida videollamada</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
                <isActive>false</isActive>
                <label>Completado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>