force-app/main/default/objects/Activity/fields/No_enviar_email_Confirmacion_de_Cita__c.field-meta.xml
<CustomField>
    <fullName>No_enviar_email_Confirmacion_de_Cita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para no enviar correo al cliente de la confirmación de cita cuando el usuario lo marca en el Gestor de Citas.</description>
    <inlineHelpText>Check para no enviar correo al cliente de la confirmación de cita cuando el usuario lo marca en el Gestor de Citas.</inlineHelpText>
    <label>No enviar email Confirmación de Cita</label>
    <type>Checkbox</type>
</CustomField>