force-app/main/default/objects/Activity/fields/Oficina__c.field-meta.xml
<CustomField>
    <fullName>Oficina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina en la que tiene lugar la reunión</description>
    <label>Oficina</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Oficina</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <type>Lookup</type>
</CustomField>