force-app/main/default/objects/Activity/fields/OmitInSearch__c.field-meta.xml
<CustomField>
    <fullName>OmitInSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Event won&apos;t casuse a block un availability search if checked</description>
    <label>Omit in search</label>
    <type>Checkbox</type>
</CustomField>