force-app/main/default/objects/Activity/fields/OportunidadRelacionada__c.field-meta.xml
<CustomField>
    <fullName>OportunidadRelacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que relaciona con una oportunidad manualmente</description>
    <label>Oportunidad relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>