force-app/main/default/objects/Activity/fields/Productos__c.field-meta.xml
<CustomField>
    <fullName>Productos__c</fullName>
    <description>Productos relacionados con la cita, lo informa automáticamente el gestor de citas al asignar la cita</description>
    <label>Productos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Productos</valueSetName>
    </valueSet>
</CustomField>