force-app/main/default/objects/Activity/fields/TipoCita__c.field-meta.xml
<CustomField>
    <fullName>TipoCita__c</fullName>
    <defaultValue>&quot;Informativa&quot;</defaultValue>
    <description>Selecciona el tipo de cita que se le asignará al cliente.</description>
    <label>Tipo de Cita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informativa</fullName>
            </value>
            <value>
                <fullName>Contratación</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>