force-app/main/default/objects/Activity/fields/Videollamada__c.field-meta.xml
<CustomField>
    <fullName>Videollamada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determina si la cita se realizará por videollamada.</description>
    <label>Videollamada</label>
    <type>Checkbox</type>
</CustomField>